# pc5253-traffic-simulation

./: .gitignore  Fig2_OVM.ipynb  README.md  actual_traffic.ipynb  nasch_fig.py  nasch_sim.py  ovm_vis.py  presentation_nasch.py  presentation_ovm.ipynb  pyproject.toml  sg_traffic_sim_interactive.ipynb
critical_points/: critical_point_analysis.py
evacuation_model/analysis/: __init__.py
evacuation_model/core/: __init__.py  evacuation_base.py
evacuation_model/docs/: NASCH_JUSTIFICATION.md
evacuation_model/runners/: __init__.py  run_evacuation_study.py
evacuation_model/scenarios/: __init__.py  contraflow_intervention.py  scenario_staged.py  scenario_staged_contraflow.py
evacuation_model/visualization/: create_intervention_effectiveness.py  visualize_evacuation.py  visualize_spatial.py
idm_model/: idm_simulation_gif.py
idm_timegap_sensitivity_results/: idm_timegap_sensitivity_20251115_133401.csv  idm_timegap_sensitivity_20251115_134133.csv
mesa/: bando_traffic_mesageo.ipynb  intro_tutorial.ipynb
nasch_sensitivity_results/: nasch_sensitivity_20251114_232509.csv
presentation/hysteresis/idm_model/: idm_fd_hysteresis_static.py  idm_simulation_gif.py
presentation/hysteresis/nasch_model/: nasch_fd_hysteresis_static.py  nasch_simulation_gif.py
presentation_figures/singapore_traffic_network/: sg_traffic_sim_interactive.ipynb  traffic_critical_comparison.ipynb
report/model_demonstration/: Fig1_nasch.ipynb
report/scenario_testing/evacuation_model/: README.md  (+1 more)
urban_planning/: README.md  __init__.py  plot_utils.py  scenario_paya_lebar.py  visualize_urban.py
(+29 files in other folders)
