[project]
name = "pc5253-traffic-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "mesa-geo>=0.9.1",
    "mesa[rec]>=3.3.0",
    "networkx>=3.5",
    "osmnx>=2.0.6",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
