[project]
name = "pc5253-traffic-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipywidgets>=8.1.7",
    "mesa-geo>=0.9.1",
    "mesa[rec]>=3.3.0",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "rtree>=1.4.1",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "shapely>=2.1.2",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
